# SArc

./: .gitignore  .gitmodules  CMakeLists.txt  FUTURE.md  README.md  __init__.py  factory.sarc  format.txt  requirements.txt
include/: SArc.h  SArc.hpp
include/SArc/: Helpers.hpp  Streaming.hpp  TermColour.hpp
lib/: CMakeLists.txt
lib/ccrc/: README  crc.h
plans/: streaming.txt
src/: CMakeLists.txt  Helpers.cpp  SArc.cpp  SArcCMain.cpp  SArcUMain.cpp  SArchive.c  SArchive.cpp  SArchiveFile.cpp  SArchiveStream.cpp
